Cleaned up some unnecessary nesting in the display logic (left over from having the DisplayLogic class).
Removed most uses of LList.  Now it is only used in the Log.  It could be an inner class there, but I'll leave it for now.